# jarvis-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
jarvis_cli/: cli.py
jarvislabs_manager/: orchestrator.py  visualisations.py
jarvislabs_manager/jlclient/: httpclient.py  jarvisclient.py
