[project]
name = "jarvis-cli"
version = "1.0.0"
description = "A terminal-based tool to manage Jarvislabs.ai instances."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "AI Assistant"}]
dependencies = [
    "rich>=13.0.0",
    "requests>=2.0.0",
    "certifi",
    "urllib3"
]
keywords = ["jarvislabs", "cli", "gpu", "instances"]

[project.scripts]
jarvis = "jarvis_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["jarvis_cli"] 